--- a/site/src/main.sass
+++ b/site/src/main.sass
@@ -315,6 +315,9 @@ article article, .archive
   +innerblock
   background-color: $ycolorb
   padding: 1em
+  .content
+    width: $navWidth
+    margin: 0 auto
 
 #hiddenDivs
   width: $navWidth
