--- a/content/html/fr/blog.erb
+++ b/content/html/fr/blog.erb
@@ -17,7 +17,7 @@ noSubMenu: true
 <% end %>
 <% 
     number_of_articles=5
-    number_of_char_for_resume=800
+    number_of_char_for_resume=400
     language=@item_rep.path.sub(/\/Scratch\//,'').sub(/\/.*$/,'') 
     last_articles = @items.select do |a| 
             a.reps[0].path =~ /\/#{language}\//  && a[:kind] == 'article'
@@ -28,7 +28,7 @@ noSubMenu: true
 
 <div id="elementblock">
 <ul class="menu">
-<li> <a href="#last-articles">&darr; Les <%= number_of_articles %> derniers articles &darr;</a></li>
+<li> <a href="#last-articles">&darr; <%= number_of_articles %> articles récents &darr;</a></li>
 <li> <a href="#tagcloud">&darr; Nuage de mots clés &darr;</a></li>
 <li> <a href="#archives">&darr; Achives &darr;</a></li>
 </ul>
@@ -44,7 +44,7 @@ Les <%= number_of_articles %> derniers articles
     <h1> <%= link_to(a[:title]+%{ <span class="nicer">»</span>}, a) %> </h1>
 
     <div class="content">
-        <%= repair_html ( excerptize( a.reps[0].compiled_content, {:length => number_of_char_for_resume} ) ) %>
+        <%= repair_html ( excerptize( a.reps[0].compiled_content, {:length => number_of_char_for_resume} ).gsub(/<img[^>]*(\/|><\/img)>/,"") ) %>
     
         <div class="flush"></div>
         <div>
@@ -64,6 +64,8 @@ Les <%= number_of_articles %> derniers articles
     <%= tagCloud %>
     </div>
 </div>
+
+<hr/>
 
 <h2 id="archives">Archives</h2>
 
