--- a/multi/blog.erb
+++ b/multi/blog.erb
@@ -17,7 +17,7 @@ noSubMenu: true
 <% end %>
 <% 
     number_of_articles=5
-    number_of_char_for_resume=800
+    number_of_char_for_resume=400
     language=@item_rep.path.sub(/\/Scratch\//,'').sub(/\/.*$/,'') 
     last_articles = @items.select do |a| 
             a.reps[0].path =~ /\/#{language}\//  && a[:kind] == 'article'
@@ -29,7 +29,7 @@ noSubMenu: true
 <div id="elementblock">
 <ul class="menu">
 en: <li> <a href="#last-articles">&darr; <%= number_of_articles %> latest articles &darr;</a> </li>
-fr: <li> <a href="#last-articles">&darr; Les <%= number_of_articles %> derniers articles &darr;</a></li>
+fr: <li> <a href="#last-articles">&darr; <%= number_of_articles %> articles récents &darr;</a></li>
 en: <li> <a href="#tagcloud">&darr; Tag Cloud &darr;</a></li>
 fr: <li> <a href="#tagcloud">&darr; Nuage de mots clés &darr;</a></li>
 <li> <a href="#archives">&darr; Achives &darr;</a></li>
@@ -47,7 +47,7 @@ fr: Les <%= number_of_articles %> derniers articles
     <h1> <%= link_to(a[:title]+%{ <span class="nicer">»</span>}, a) %> </h1>
 
     <div class="content">
-        <%= repair_html ( excerptize( a.reps[0].compiled_content, {:length => number_of_char_for_resume} ) ) %>
+        <%= repair_html ( excerptize( a.reps[0].compiled_content, {:length => number_of_char_for_resume} ).gsub(/<img[^>]*(\/|><\/img)>/,"") ) %>
     
         <div class="flush"></div>
         <div>
