--- a/site/src/main.sass
+++ b/site/src/main.sass
@@ -73,6 +73,7 @@ hgroup#maintitle
   margin: .5em 0 
   font-size: 2em
   h1,h2
+    margin: .3em
     &,a
       font-weight: normal
       color: $ycolor9
