New intro, more informations

--- a/site/src/main.sass
+++ b/site/src/main.sass
@@ -347,3 +347,21 @@ body.support #main > article
   font-size: 1.2em
   form
     margin: 1em
+
+#helloblock
+  color: $ycolor1
+  text-shadow: 0 -1px 0 rgba(#000,.9)
+  padding: 20px
+  +border-radius()
+  +box-shadow(rgba(#000,.6) 0 0 15px inset)
+  +linear-gradient(color-stops($ycolor4,$ycolor5))
+  #logo
+    float: left
+    margin-right: 40px
+  #blocktitle
+    font-size: 1.6em
+    font-weight: normal
+  #blocktext
+    margin: 32px 0
+  #getit
+    float: right
