Added a new section (Get it!)

--- a/layouts/article.html
+++ b/layouts/article.html
@@ -45,15 +45,11 @@
         <div id="prelinks">
             <div id="choixlang"><%= choixlang %></div>
             <div id="choixrss"><%= choixrss %></div>
+            <nav id="mainnav"><%= generateMenu %><div class="flush"></div></nav>
         </div>
         <hgroup id="maintitle">
         <%= page_title %>
         </hgroup>
-        <nav id="mainnav">
-        <ul>
-            <%= generateMenu %>
-        </ul>
-        </nav>
         </header>
 
         <div id="main" role="main">
