--- a/site/css/main.css
+++ b/site/css/main.css
@@ -61,7 +61,7 @@ body a:hover, body a:active {
 
 /* line 72, ../src/main.sass */
 hgroup#maintitle {
-  margin: 0.5em 0;
+  margin: 1em 0;
   font-size: 2em;
   border-top: solid 1px black;
   border-bottom: solid 1px white;
@@ -277,15 +277,14 @@ h1, h2 {
   box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
 }
 
-/* line 197, ../src/main.sass */
+/* line 198, ../src/main.sass */
 #mainnav {
   width: 600px;
   padding: 0;
-  margin: 2.5em auto;
+  margin: 0 auto;
 }
-/* line 201, ../src/main.sass */
+/* line 202, ../src/main.sass */
 #mainnav ul {
-  height: 2.2ex;
   padding: 0;
   list-style-type: none;
 }
@@ -293,8 +292,8 @@ h1, h2 {
 #mainnav ul li {
   text-align: center;
   float: left;
-  width: 160px;
-  margin: 0 20px;
+  width: 144px;
+  margin: 0 3px;
   font-size: 14px;
 }
 /* line 144, ../src/main.sass */
@@ -344,7 +343,7 @@ h1, h2 {
 }
 /* line 211, ../src/main.sass */
 #mainnav ul li * {
-  font-size: 1.5em;
+  font-size: 1em;
 }
 
 /* line 215, ../src/main.sass */
@@ -508,7 +507,7 @@ ul.article_metadata a:hover {
   -khtml-border-radius: 2.3ex;
   border-radius: 2.3ex;
   margin: 0;
-  padding: 10px;
+  padding: 0;
   list-style-type: none;
 }
 /* line 290, ../src/main.sass */
@@ -516,7 +515,7 @@ ul.article_metadata a:hover {
   display: inline-block;
   text-align: center;
   width: 150px;
-  margin: 0 20px;
+  margin: 0;
   font-size: 14px;
 }
 /* line 144, ../src/main.sass */
