--- a/site/src/main.sass
+++ b/site/src/main.sass
@@ -70,7 +70,7 @@ body
   +transition
 
 hgroup#maintitle
-  margin: .5em 0 
+  margin: 1em 0 
   font-size: 2em
   h1,h2
     margin: .3em
@@ -194,22 +194,22 @@ h1,h2
   float: right
   +ybutton
 
+$nbNavItems: 4
 #mainnav
   width: $navWidth
   padding: 0
-  margin: 2.5em auto
+  margin: 0 auto
   ul
-    height: 2.2ex
     padding: 0
     list-style-type: none
     li
       text-align: center
       float: left
-      width: ($navWidth - 120px)/3
-      margin: 0 20px
+      width: ($navWidth - (6*$nbNavItems))/$nbNavItems
+      margin: 0 3px
       +ybutton
       *
-        font-size: 1.5em
+        font-size: 1.0em
 
 
 .flush
@@ -285,13 +285,13 @@ ul.article_metadata
     +box-shadow(#FFF 0 0 3px, rgba(#000,0.2) 0 0 3px inset)
     +border-radius(2.3ex)
     margin: 0
-    padding: 10px
+    padding: 0
     list-style-type: none
     li
       display: inline-block
       text-align: center
-      width: ($navWidth - 150px)/3
-      margin: 0 20px
+      width: $navWidth / 4
+      margin: 0
       +ybutton
 
 #related_articles
