--- a/site/src/main.sass
+++ b/site/src/main.sass
@@ -365,3 +365,7 @@ body.support #main > article
     margin: 32px 0
   #getit
     float: right
+
+iframe
+  +box-shadow(rgba(#000,.6) 0 0 15px)
+  +border-radius()
