Fixed some alignment issue for blog

--- a/content/html/fr/blog.erb
+++ b/content/html/fr/blog.erb
@@ -29,7 +29,7 @@ noSubMenu: true
 <div id="elementblock">
 <ul class="menu">
 <li> <a href="#last-articles">&darr; <%= number_of_articles %> articles récents &darr;</a></li>
-<li> <a href="#tagcloud">&darr; Nuage de mots clés &darr;</a></li>
+<li> <a href="#tagcloud">&darr; Mots clés &darr;</a></li>
 <li> <a href="#archives">&darr; Achives &darr;</a></li>
 </ul>
 </div>
