--- a/multi/blog.erb
+++ b/multi/blog.erb
@@ -31,7 +31,7 @@ noSubMenu: true
 en: <li> <a href="#last-articles">&darr; <%= number_of_articles %> latest articles &darr;</a> </li>
 fr: <li> <a href="#last-articles">&darr; <%= number_of_articles %> articles récents &darr;</a></li>
 en: <li> <a href="#tagcloud">&darr; Tag Cloud &darr;</a></li>
-fr: <li> <a href="#tagcloud">&darr; Nuage de mots clés &darr;</a></li>
+fr: <li> <a href="#tagcloud">&darr; Mots clés &darr;</a></li>
 <li> <a href="#archives">&darr; Achives &darr;</a></li>
 </ul>
 </div>
