Better support page (forms)

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -73,6 +73,7 @@ hgroup#maintitle {
   background-image: -webkit-linear-gradient(top, #60646c, #51555c);
   background-image: -moz-linear-gradient(top, #60646c, #51555c);
   background-image: -o-linear-gradient(top, #60646c, #51555c);
+  background-image: -ms-linear-gradient(top, #60646c, #51555c);
   background-image: linear-gradient(top, #60646c, #51555c);
 }
 /* line 75, ../src/main.sass */
@@ -108,6 +109,7 @@ footer {
   background-image: -webkit-linear-gradient(top, #60646c, #51555c);
   background-image: -moz-linear-gradient(top, #60646c, #51555c);
   background-image: -o-linear-gradient(top, #60646c, #51555c);
+  background-image: -ms-linear-gradient(top, #60646c, #51555c);
   background-image: linear-gradient(top, #60646c, #51555c);
 }
 /* line 96, ../src/main.sass */
@@ -727,6 +729,7 @@ body.support #main > article form {
   background-image: -webkit-linear-gradient(top, #60646c, #51555c);
   background-image: -moz-linear-gradient(top, #60646c, #51555c);
   background-image: -o-linear-gradient(top, #60646c, #51555c);
+  background-image: -ms-linear-gradient(top, #60646c, #51555c);
   background-image: linear-gradient(top, #60646c, #51555c);
 }
 /* line 354, ../src/main.sass */
@@ -760,4 +763,53 @@ iframe {
   -ms-border-radius: 5px;
   -khtml-border-radius: 5px;
   border-radius: 5px;
+}
+
+/* line 369, ../src/main.sass */
+input[type=text], textarea {
+  -moz-box-shadow: #868b96 0 0 3px inset, #efeff4 0 0 3px;
+  -webkit-box-shadow: #868b96 0 0 3px inset, #efeff4 0 0 3px;
+  -o-box-shadow: #868b96 0 0 3px inset, #efeff4 0 0 3px;
+  box-shadow: #868b96 0 0 3px inset, #efeff4 0 0 3px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+  border: solid 1px #868b96;
+  color: #60646c;
+  background: #efeff4;
+  padding: 1ex;
+  margin: 1em 0;
+}
+
+/* line 378, ../src/main.sass */
+input[type=submit], .bluebutton {
+  display: block;
+  text-align: center;
+  padding: 1ex 3ex;
+  margin: 1em 0;
+  -moz-box-shadow: #868b96 0 0 3px, #efeff4 2px 0;
+  -webkit-box-shadow: #868b96 0 0 3px, #efeff4 2px 0;
+  -o-box-shadow: #868b96 0 0 3px, #efeff4 2px 0;
+  box-shadow: #868b96 0 0 3px, #efeff4 2px 0;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+  text-shadow: 0 -1px #303237;
+  border: solid 1px #66aaff;
+  color: #efeff4 !important;
+  font-weight: bold;
+  background: #4269a7;
+}
+/* line 390, ../src/main.sass */
+input[type=submit]:hover, .bluebutton:hover {
+  color: #efeff4;
+  text-shadow: 0 0 1px #005588;
+  cursor: pointer;
+  background: #537ab8;
 }
