--- a/site/css/main.css
+++ b/site/css/main.css
@@ -73,7 +73,6 @@ hgroup#maintitle {
   background-image: -webkit-linear-gradient(top, #60646c, #51555c);
   background-image: -moz-linear-gradient(top, #60646c, #51555c);
   background-image: -o-linear-gradient(top, #60646c, #51555c);
-  background-image: -ms-linear-gradient(top, #60646c, #51555c);
   background-image: linear-gradient(top, #60646c, #51555c);
 }
 /* line 75, ../src/main.sass */
@@ -109,7 +108,6 @@ footer {
   background-image: -webkit-linear-gradient(top, #60646c, #51555c);
   background-image: -moz-linear-gradient(top, #60646c, #51555c);
   background-image: -o-linear-gradient(top, #60646c, #51555c);
-  background-image: -ms-linear-gradient(top, #60646c, #51555c);
   background-image: linear-gradient(top, #60646c, #51555c);
 }
 /* line 96, ../src/main.sass */
@@ -729,7 +727,6 @@ body.support #main > article form {
   background-image: -webkit-linear-gradient(top, #60646c, #51555c);
   background-image: -moz-linear-gradient(top, #60646c, #51555c);
   background-image: -o-linear-gradient(top, #60646c, #51555c);
-  background-image: -ms-linear-gradient(top, #60646c, #51555c);
   background-image: linear-gradient(top, #60646c, #51555c);
 }
 /* line 354, ../src/main.sass */
@@ -765,8 +762,11 @@ iframe {
   border-radius: 5px;
 }
 
-/* line 369, ../src/main.sass */
+/* line 371, ../src/main.sass */
 input[type=text], textarea {
+  display: block;
+  width: 28em;
+  font-size: 0.9em;
   -moz-box-shadow: #868b96 0 0 3px inset, #efeff4 0 0 3px;
   -webkit-box-shadow: #868b96 0 0 3px inset, #efeff4 0 0 3px;
   -o-box-shadow: #868b96 0 0 3px inset, #efeff4 0 0 3px;
@@ -784,16 +784,22 @@ input[type=text], textarea {
   margin: 1em 0;
 }
 
-/* line 378, ../src/main.sass */
+/* line 382, ../src/main.sass */
+textarea {
+  height: 17.305em;
+}
+
+/* line 385, ../src/main.sass */
 input[type=submit], .bluebutton {
   display: block;
   text-align: center;
+  font-size: 0.9em;
   padding: 1ex 3ex;
-  margin: 1em 0;
-  -moz-box-shadow: #868b96 0 0 3px, #efeff4 2px 0;
-  -webkit-box-shadow: #868b96 0 0 3px, #efeff4 2px 0;
-  -o-box-shadow: #868b96 0 0 3px, #efeff4 2px 0;
-  box-shadow: #868b96 0 0 3px, #efeff4 2px 0;
+  margin: 0.5em 0;
+  -moz-box-shadow: #66aaff 0 1px 2px inset, #efeff4 2px 0;
+  -webkit-box-shadow: #66aaff 0 1px 2px inset, #efeff4 2px 0;
+  -o-box-shadow: #66aaff 0 1px 2px inset, #efeff4 2px 0;
+  box-shadow: #66aaff 0 1px 2px inset, #efeff4 2px 0;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   -o-border-radius: 5px;
@@ -801,12 +807,12 @@ input[type=submit], .bluebutton {
   -khtml-border-radius: 5px;
   border-radius: 5px;
   text-shadow: 0 -1px #303237;
-  border: solid 1px #66aaff;
+  border: solid 3px #303237;
   color: #efeff4 !important;
   font-weight: bold;
   background: #4269a7;
 }
-/* line 390, ../src/main.sass */
+/* line 398, ../src/main.sass */
 input[type=submit]:hover, .bluebutton:hover {
   color: #efeff4;
   text-shadow: 0 0 1px #005588;
